fixed horizontal scroll layout css

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,7 +1,3 @@
-.flow {
-  width: 100vw;
-}
-
 .content {
   margin-top: var(--header-height);
   display: flex;
